// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.c0 {
  color: #fff;
  background: red;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 300;
  padding: 9px 36px;
  border-radius: 4px;
}

<button
  className="c0"
>
  Test
</button>
`;

exports[`ButtonAzul renders correctly 1`] = `
.c0 {
  color: #fff;
  background: blue;
  cursor: pointer;
  font-size: 16rem;
  font-weight: 300;
  padding: 19px 16px;
  border-radius: 14px;
}

<button
  className="c0"
>
  Test
</button>
`;
